# Robot17

./: .gitignore  README.md
Arduino_codes/Blink_ros/: Blink_ros.ino
Arduino_codes/robotbase_17/: Motor.cpp  Motor.h  Ultrasonic.cpp  Ultrasonic.h  robotbase_17.ino
OpencvCodes/CameraOpen/: CMakeCache.txt  CMakeLists.txt  Makefile  cameraopen  cameraopen.cpp  cmake_install.cmake
OpencvCodes/displayimage/: CMakeCache.txt  DisplayImage  Makefile  cmake_install.cmake
OpencvCodes/hsvimage/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hsvimage  hsvimage.cpp
opencvcodes/: serial.txt  things to do.txt  whitecolordetect.cpp
opencvcodes/Nuke_Clear/: Algorithm for Nuke.docx  things to do.txt
opencvcodes/Nuke_Clear/calibiration/: calibiration.sln
opencvcodes/Nuke_Clear/newcalibration/: newcalibration.sln
opencvcodes/Nuke_Clear/newnuke2/: newnuke2.sln
opencvcodes/Nuke_Clear/nuke1/: nuke1.sln
opencvcodes/Nuke_Clear/nuke2/: nuke2.sln
opencvcodes/Nuke_Clear/nukerun/: nukerun.sln
opencvcodes/Nuke_Clear/shift/: shift.sln
opencvcodes/Nuke_Clear/squaredetect/: squaredetect.sln
opencvcodes/Nuke_Clear/whitedetect/: whitedetect.sln
opencvcodes/Nuke_Clear/whitefollower/: whitefollower.sln
opencvcodes/Serial Communication tutorial/: USART.c  bot_control.h  tserial.cpp  tserial.h  usart.h
opencvcodes/bombay/cricbot/: cricbot.sln
opencvcodes/bombay/crickettry/: crickettry.sln
opencvcodes/bombay/trial/: trial.sln
opencvcodes/cameraopen/: cameraopen.sln
opencvcodes/cameraopen/Debug/: cameraopen.ilk
opencvcodes/cameraopen/cameraopen/: ReadMe.txt  cameraopen.cpp  cameraopen.vcproj  stdafx.cpp
opencvcodes/cblobtest/: cblobtest.sln
opencvcodes/cblobtest/Debug/: cblobtest.ilk
opencvcodes/cblobtest/cblobtest/: ReadMe.txt  cblobtest.cpp  cblobtest.vcproj  stdafx.cpp
opencvcodes/cvmoments/: cvmoments.sln
opencvcodes/cvmoments/Debug/: cvmoments.ilk
opencvcodes/imtool/: imtool.sln
opencvcodes/redcolordetect/: ReadMe.txt  redcolordetect.cpp  redcolordetect.sln  redcolordetect.vcproj  stdafx.cpp
opencvcodes/regionofinterest/: regionofinterest.sln
opencvcodes/serialtest/: serialtest.sln
opencvcodes/traffic_light/: traffic_light.sln
ros_opencv/: CMakeLists.txt  package.xml
ros_opencv/src/: ros_opencv.cpp
ros_opencv2/: CMakeLists.txt  package.xml
ros_opencv2/src/: linefollower_17.cpp
ros_project1/: CMakeLists.txt  package.xml
ros_project1/src/: talker.cpp
ros_project2/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
ros_project2/src/: kb_commands.cpp  twist.cpp  twist.cpp~
(+181 files in other folders)
